--- a/build-a-recipe-page.html
+++ b/build-a-recipe-page.html
@@ -13,7 +13,7 @@
       <h1>Chocolate Cake Recipe</h1>
       <p>Follow this simple recipe to create delicious chocolate cake.</p>
       <img 
-      src='https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcSC4FlHU6efbvnRokCek2eZyHnMK1-YKMLTchXM93Lt0-VnETRRDV55ph1EAfuJ1EQU2onM-EcWFCx7igQsF6xgHJdeIVNHDEH0y8x6uUVQ' alt='Delicious chocolate cake'/>
+      src='https://unsplash.com/photos/brown-cake-on-clear-glass-cake-stand-Id8BO472TbY' alt='Delicious chocolate cake'/>
     </main>
     <section>
       <h2>Ingredients</h2>
