--- a/build-a-checkout-page.html
+++ b/build-a-checkout-page.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>Checkout</h1>
+    </header>
+    <main>
         <section>
             <h2>Your Cart</h2>
             <img src='https://cdn.freecodecamp.org/curriculum/labs/cube.jpg' alt='rubik cube'/>
