--- a/design-a-business-card.html
+++ b/design-a-business-card.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <title>Business Card</title>
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='design-a-business-card.css'/>
 </head>
 
 <body>
