--- a/build-a-stylized-to-do-list.html
+++ b/build-a-stylized-to-do-list.html
@@ -9,46 +9,47 @@
 </head>
 
 <body>
-    <h1>My To-Do List</h1>
-    <ul class='todo-list'>
-        <li>
-            <input id='learn-html'type='checkbox'/>
-            <label for='learn-html'>Learn HTML</label>
-            <ul class='sub-item'>
-                <li>
-                    <a class='sub-item-link' href='https://www.w3schools.com/html/default.asp' target='_blank'>HTML tutorial</a>
-                </li>
-            </ul> 
-        </li>
-        <li>
-            <input id='learn-css'type='checkbox'/>
-            <label for='learn-css'>Learn CSS</label>
-            <ul class='sub-item'>
-                <li>
-                    <a class='sub-item-link' href='https://www.w3schools.com/css/default.asp' target='_blank'>CSS tutorial</a>
-                </li>
-            </ul> 
-        </li>
-        <li>
-            <input id='learn-javascript'type='checkbox'/>
-            <label for='learn-javascript'>Learn JavaScript</label>
-            <ul class='sub-item'>
-                <li>
-                    <a class='sub-item-link' href='https://www.w3schools.com/js/default.asp' target='_blank'>JavaScript tutorial</a>
-                </li>
-            </ul> 
-        </li>
-        <li>
-            <input id='learn-python'type='checkbox'/>
-            <label for='learn-python'>Learn Python</label>
-            <ul class='sub-item'>
-                <li>
-                    <a class='sub-item-link' href='https://www.w3schools.com/python/default.asp' target='_blank'>Python tutorial</a>
-                </li>
-            </ul> 
-        </li>
-    </ul>
-
+    <main>
+        <h1>My To-Do List</h1>
+        <ul class='todo-list'>
+            <li>
+                <input id='learn-html'type='checkbox'/>
+                <label for='learn-html'>Learn HTML</label>
+                <ul class='sub-item'>
+                    <li>
+                        <a class='sub-item-link' href='https://www.w3schools.com/html/default.asp' target='_blank'>HTML tutorial</a>
+                    </li>
+                </ul> 
+            </li>
+            <li>
+                <input id='learn-css'type='checkbox'/>
+                <label for='learn-css'>Learn CSS</label>
+                <ul class='sub-item'>
+                    <li>
+                        <a class='sub-item-link' href='https://www.w3schools.com/css/default.asp' target='_blank'>CSS tutorial</a>
+                    </li>
+                </ul> 
+            </li>
+            <li>
+                <input id='learn-javascript'type='checkbox'/>
+                <label for='learn-javascript'>Learn JavaScript</label>
+                <ul class='sub-item'>
+                    <li>
+                        <a class='sub-item-link' href='https://www.w3schools.com/js/default.asp' target='_blank'>JavaScript tutorial</a>
+                    </li>
+                </ul> 
+            </li>
+            <li>
+                <input id='learn-python'type='checkbox'/>
+                <label for='learn-python'>Learn Python</label>
+                <ul class='sub-item'>
+                    <li>
+                        <a class='sub-item-link' href='https://www.w3schools.com/python/default.asp' target='_blank'>Python tutorial</a>
+                    </li>
+                </ul> 
+            </li>
+        </ul>
+    </main>
 </body>
 
 </html>
