--- a/build-a-tribute-page.html
+++ b/build-a-tribute-page.html
@@ -62,7 +62,7 @@
       </section>  
     </main>
     <footer>
-       <p>“The present is theirs; the future, for which I really worked, is mine.” - Nikola Tesla</p>
+       <p><q cite="https://www.goodreads.com/quotes/18082-the-present-is-theirs-the-future-for-which-i-really">The present is theirs; the future, for which I really worked, is mine.</q> - Nikola Tesla</p>
     </footer>
   </body>
 </html>
